// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 2`] = `
Object {
  "@angular-devkit/build-angular": "^14.0.0",
  "@angular-eslint/builder": "9999.0.1-local-integration-tests",
  "@angular-eslint/eslint-plugin": "9999.0.1-local-integration-tests",
  "@angular-eslint/eslint-plugin-template": "9999.0.1-local-integration-tests",
  "@angular-eslint/schematics": "9999.0.1-local-integration-tests",
  "@angular-eslint/template-parser": "9999.0.1-local-integration-tests",
  "@angular/cli": "~14.0.0",
  "@angular/compiler-cli": "^14.0.0",
  "@types/jasmine": "~4.0.0",
  "@typescript-eslint/eslint-plugin": "5.29.0",
  "@typescript-eslint/parser": "5.29.0",
  "eslint": "^8.18.0",
  "jasmine-core": "~4.1.0",
  "karma": "~6.3.0",
  "karma-chrome-launcher": "~3.1.0",
  "karma-coverage": "~2.2.0",
  "karma-jasmine": "~5.0.0",
  "karma-jasmine-html-reporter": "~1.7.0",
  "ng-packagr": "^14.0.0",
  "typescript": "~4.7.2",
}
`;

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 3`] = `
Object {
  "ignorePatterns": Array [
    "projects/**/*",
  ],
  "overrides": Array [
    Object {
      "extends": Array [
        "plugin:@angular-eslint/recommended",
        "plugin:@angular-eslint/template/process-inline-templates",
      ],
      "files": Array [
        "*.ts",
      ],
      "parserOptions": Object {
        "createDefaultProgram": true,
        "project": Array [
          "tsconfig.json",
        ],
      },
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "extends": Array [
        "plugin:@angular-eslint/template/recommended",
      ],
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
  "root": true,
}
`;

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 4`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "src/**/*.ts",
      "src/**/*.html",
    ],
  },
}
`;

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 6`] = `
Object {
  "extends": "../../.eslintrc.json",
  "ignorePatterns": Array [
    "!**/*",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "*.ts",
      ],
      "parserOptions": Object {
        "createDefaultProgram": true,
        "project": Array [
          "projects/another-app/tsconfig.app.json",
          "projects/another-app/tsconfig.spec.json",
        ],
      },
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
}
`;

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 7`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "projects/another-app/**/*.ts",
      "projects/another-app/**/*.html",
    ],
  },
}
`;

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 9`] = `
Object {
  "extends": "../../.eslintrc.json",
  "ignorePatterns": Array [
    "!**/*",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "*.ts",
      ],
      "parserOptions": Object {
        "createDefaultProgram": true,
        "project": Array [
          "projects/another-lib/tsconfig.lib.json",
          "projects/another-lib/tsconfig.spec.json",
        ],
      },
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "lib",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "lib",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
}
`;

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 10`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "projects/another-lib/**/*.ts",
      "projects/another-lib/**/*.html",
    ],
  },
}
`;

exports[`v13-new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 11`] = `
"
Linting \\"v13-new-workspace\\"...

All files pass linting.


Linting \\"another-app\\"...

All files pass linting.


Linting \\"another-lib\\"...

__ROOT__/v13-new-workspace/projects/another-lib/src/lib/another-lib.component.ts
  17:3  error  Lifecycle methods should not be empty  @angular-eslint/no-empty-lifecycle-method

✖ 1 problem (1 error, 0 warnings)
"
`;
